# PythonEquations2Orbits

./: .gitignore  PythonEquations2Orbits.code-workspace  README.md  TestBasicCacheOperation.pickle  TestBasicCacheOperation2.pickle  environment.yml  mypy.ini  requirements.txt  setup.py
Demos/: 001_FromMathToNumerics.ipynb  ConveringAMaximizationProblemToAMinimizationProblem.ipynb  DeriveDifferentialFormOfTransversalityCondition.ipynb  PlanerLeoToGeoDemo.py  PlanerLeoToGeoDemo_notext.py  PlanerLeoToGeoDemo_pyomo.py  Simple1DExample.py
DemosAndPrototypes/: 001_FromMathToNumerics.ipynb  007_Cr3bpPhasing.py  (+42 more)
src/: pyproject.toml
src/pyeq2orb/: NumericalOptimizerProblem.py  ProblemBase.py
src/pyeq2orb/Coordinates/: CartesianModule.py  KeplerianModule.py  ModifiedEquinoctialElementsModule.py  QuaternionModule.py  RotationMatrix.py
src/pyeq2orb/ForceModels/: CircularRestricted3BodyProblem.py  GravityField.py  NBodyEquations.py  TwoBodyForce.py
src/pyeq2orb/Graphics/: Plotly2DModule.py  Primitives.py
src/pyeq2orb/HighLevelHelpers/: EquinoctialElementsHelpers.py
src/pyeq2orb/Numerical/: LambdifyHelpers.py  ScalingHelpers.py  ScipyCallbackCreators.py  SimpleProblemCallers.py
src/pyeq2orb/Problems/: ContinuousThrustCircularOrbitTransfer.py  OneDimensionalMinimalWorkProblem.py  StateManager.py
src/pyeq2orb/Solvers/: ScipyDiscretizationMinimizeWrapper.py
src/pyeq2orb/Spice/: rotationMatrixWrapper.py  spiceScope.py
src/pyeq2orb/Symbolics/: SymbolicUtilities.py  Vectors.py
src/pyeq2orb/Utilities/: LambdifiedExpressionCache.py  Typing.py  utilitiesForTest.py
(+152 files in other folders)
